--- a/smapp/templates/users/sign_up.html
+++ b/smapp/templates/users/sign_up.html
@@ -5,12 +5,10 @@
     <title>Title</title>
 </head>
 <body>
-    <h1>Login</h1>
+    <h2>Sign Up</h2>
     <form method="POST">
-        {% csrf_token %}
-        {{login_form}}
+        {{signup_form}}
         <button>Submit</button>
-        <a href="/users/signup">Sign Up</a>
     </form>
 </body>
 </html>
