--- a/smapp/templates/users/sign_up.html
+++ b/smapp/templates/users/sign_up.html
@@ -7,6 +7,7 @@
 <body>
     <h2>Sign Up</h2>
     <form method="POST">
+        {% csrf_token %}
         {{signup_form}}
         <button>Submit</button>
     </form>
