--- a/smapp/templates/mainpage/main.html
+++ b/smapp/templates/mainpage/main.html
@@ -7,6 +7,7 @@
 <body>
     <h1>Main Page</h1>
     <h2>New Post</h2>
+    <a href = "/users/edit_profile">Edit Profile</a>
     <form method="POST" action="/posts/new_post" enctype="multipart/form-data">
         {% csrf_token %}
         {{new_post_form}}
@@ -15,6 +16,7 @@
     <li class = "post_list">
         {% for post in posts %}
         <div class = "post">
+            <img src= "{{post.author.profilepic.image.url}}">
             <img src="{{post.image.url}}">
             <p>{{post.text}}</p>
             <p>{{post.author}}</p>
