--- a/smapp/templates/users/edit_profile.html
+++ b/smapp/templates/users/edit_profile.html
@@ -5,6 +5,17 @@
     <title>Title</title>
 </head>
 <body>
-
+  <h1>Edit Your Profile</h1>
+  <form method="POST" enctype="multipart/form-data">
+    {% csrf_token %}
+    <label for="username">Username</label>
+    <input type="text" id="username" name="username" value="{{user.username}}">
+    <label for="password">Password</label>
+    <input type="password" id="password" name="password" value="{{user.password}}">
+    <img src="{{user.profilepic.image.url}}">
+    <label for="profilepic">Profile Pic</label>
+    <input type="file" name="profilepic" id="profilepic">
+    <button>Submit</button>
+  </form>
 </body>
 </html>
