--- a/smapp/templates/mainpage/main.html
+++ b/smapp/templates/mainpage/main.html
@@ -16,7 +16,7 @@
     <li class = "post_list">
         {% for post in posts %}
         <div class = "post">
-            <img src= "{{post.author.profilepic.image.url}}">
+            <img id="pfp" src= "{{post.author.profilepic.image.url}}">
             <img src="{{post.image.url}}">
             <p>{{post.text}}</p>
             <p>{{post.author}}</p>
