--- a/smapp/templates/mainpage/main.html
+++ b/smapp/templates/mainpage/main.html
@@ -35,7 +35,7 @@
             {% endwith %}
             <form action="/comments/new_comment" method="POST">
                 {% csrf_token %}
-                {{ form }}
+                {{new_comment_form}}
                 <button>Submit</button>
             </form>
         </div>
