--- a/smapp/templates/mainpage/main.html
+++ b/smapp/templates/mainpage/main.html
@@ -5,43 +5,41 @@
     <title>Title</title>
 </head>
 <body>
-    <h1>Main Page</h1>
-    <form method="GET" action="/">
-
-    </form>
-    <h2>New Post</h2>
-    <a href = "/users/edit_profile">Edit Profile</a>
-    <form method="POST" action="/posts/new_post" enctype="multipart/form-data">
-        {% csrf_token %}
-        {{new_post_form}}
-        <button>Submit</button>
-    </form>
-    <li class = "post_list">
-        {% for post in posts %}
-        <div class = "post">
-            <img id="pfp" src= "{{post.author.profilepic.image.url}}">
-            <img src="{{post.image.url}}">
-            <p>{{post.text}}</p>
-            <p>{{post.author}}</p>
-            <p>{{post.created_at}}</p>
-            {% with comments=comment_dict|get_value:post.positID %}
-                {% if comments %}
-                    {% for comment in comments %}
-                        <p>{{ comment }}</p>
-                    {% endfor %}
-                {% else %}
-                    <p>No comments for this post</p>
-                {% endif %}
-            {% endwith %}
-            <form action="/comments/new_comment" method="POST">
-                {% csrf_token %}
-                {{new_comment_form}}
-                <button>Submit</button>
-            </form>
-        </div>
-        {% empty %}
+    <div class = "post_container">
+        <h1>New Post</h1>
+        <form action="/posts/receive_post" method="POST" enctype="multipart/form-data">
+            {% csrf_token %}
+            {{new_post}}
+            <button>Submit</button>
+        </form>
+        <h1>Post List</h1>
+        <li class = "post_list">
+            {% load filters %}
+            {% for post, form in posts_and_comment_form %}
+                <div class="post">
+                    <img src="{{ post.image.url }}">
+                    <p>{{ post.text }}</p>
+                    <p>{{ post.author }}</p>
+                    <p>{{ post.created_at }}</p>
+                    {% with comments=comment_dict|get_value:post.positID %}
+                        {% if comments %}
+                            {% for comment in comments %}
+                                <p>{{ comment }}</p>
+                            {% endfor %}
+                        {% else %}
+                            <p>No comments for this post</p>
+                        {% endif %}
+                    {% endwith %}
+                    <form action="/comments/new_comment" method="POST">
+                        {% csrf_token %}
+                        {{ form }}
+                        <button>Submit</button>
+                    </form>
+                </div>
+            {% empty %}
             <p>No Posts</p>
-        {% endfor %}
-    </li>
+            {% endfor %}
+        </li>
+    </div>
 </body>
 </html>
