--- a/smapp/templates/users/sign_up.html
+++ b/smapp/templates/users/sign_up.html
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
+{% extends "base.html" %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
+    {% block content %}
     <h2>Sign Up</h2>
     <form method="POST">
         {% csrf_token %}
-        {{signup_form}}
+        {{ signup_form.email.label }}
+        {{ signup_form.email }}
+        {{ signup_form.username.label }}
+        {{ signup_form.username }}
+        {{ signup_form.password1.label }}
+        {{ signup_form.password1 }}
+        {{ signup_form.password2.label }}
+        {{ signup_form.password2 }}
         <button>Submit</button>
     </form>
+    {% endblock %}
 </body>
 </html>
