--- a/smapp/templates/mainpage/main.html
+++ b/smapp/templates/mainpage/main.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% extends "base.html" %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,14 +9,16 @@
 <body>
     {% block content %}
     <link rel="stylesheet" type="text/css" href="{% static '/css/main_page.css' %}">
-    <div class = "post_container">
-        <h1>Search For Friends</h1>
+    <div class="search_profiles">
+        <h1>Search Profiles</h1>
         <form method="GET" action="/users/search_profile/">
             {% csrf_token %}
-            <input type="text" name="username">
-            <button>Submit</button>
+            <input class="form-group" type="text" name="username">
+            <button class="btn btn-primary">Submit</button>
+            <a class="form-group" href = "/users/edit_profile">Edit Profile</a>
         </form>
-        <a href = "/users/edit_profile">Edit Profile</a>
+    </div>
+    <div class = "post_container">
         <h1>New Post</h1>
         <form action="/posts/receive_post" method="POST" enctype="multipart/form-data">
             {% csrf_token %}
