--- a/smapp/templates/users/edit_profile.html
+++ b/smapp/templates/users/edit_profile.html
@@ -1,21 +1,34 @@
 <!DOCTYPE html>
+{% extends "base.html" %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    {% load static %}
 </head>
 <body>
-  <h1>Edit Your Profile</h1>
-  <form method="POST" enctype="multipart/form-data">
-    {% csrf_token %}
-    <label for="username">Username</label>
-    <input type="text" id="username" name="username" value="{{user.username}}">
-    <label for="password">Password</label>
-    <input type="password" id="password" name="password" value="{{user.password}}">
-    <img src="{{user.profilepic.image.url}}">
-    <label for="profilepic">Profile Pic</label>
-    <input type="file" name="profilepic" id="profilepic">
-    <button>Submit</button>
-  </form>
+  {% block content %}
+  <link rel="stylesheet" href="{% static '/css/editprofile.css' %}">
+  <script defer src="{% static '/js/set_pfp.js/' %}"></script>
+  <div class="container">
+      <h1>Edit Your Profile</h1>
+      <form method="POST" enctype="multipart/form-data">
+        {% csrf_token %}
+        <div class="form-group">
+          <label for="username">Username</label>
+          <input type="text" id="username" name="username" value="{{user.username}}">
+        </div>
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input type="password" id="password" name="password" value="{{user.password}}">
+        </div>
+        <div class="form-group">
+          <img id="pfp" src="{{user.profilepic.image.url}}">
+          <input type="file" hidden name="profilepic" id="profilepic">
+        </div>
+        <button>Submit</button>
+      </form>
+  </div>
+  {% endblock %}
 </body>
 </html>
